--- a/Halo2-Circuit-Undercontraned-Analyzer/korrekt/Cargo.toml
+++ b/Halo2-Circuit-Undercontraned-Analyzer/korrekt/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 halo2_proofs = { version = "0.2.0", path = "../halo2/halo2_proofs" }
 z3 = {version="0.11.2", features = ["static-link-z3"]}
+env_logger = "0.9.0"
+
+log = "0.4.17"
+
