--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 [dependencies]
 halo2_proofs = { version = "0.2.0", path = "../halo2/halo2_proofs" }
 env_logger = "0.9.0"
-
 log = "0.4.17"
 try-catch = "0.2.2"
+anyhow = "1.0.71"
+
+[features]
+default = []
+benches = []
