--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19" }
 gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "2783eba338274a52036bf3db7fbc29575e24aa9f", package = "gadgets" }
+zkevm_circuits = { path = "../../pse/zkevm-circuits/zkevm-circuits", package = "zkevm-circuits" }
+eth-types = { path = "../../pse/zkevm-circuits/eth-types" }
 halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
 
 env_logger = "0.9.0"
@@ -14,6 +16,9 @@ try-catch = "0.2.2"
 anyhow = "1.0.71"
 regex = "1.8.4"
 num = "0.4.0"
+itertools = "0.10"
+strum = "0.24"
+strum_macros = "0.24"
 
 [lib]
 name = "korrekt"
