--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19" }
-gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "2783eba338274a52036bf3db7fbc29575e24aa9f", package = "gadgets" }
+# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19" }
+# halo2_proofs = { git = "https://github.com/zcash/halo2.git", package = "halo2_proofs" }
+halo2_proofs = { path = "../../zcash/halo2/halo2_proofs" }
+# gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "2783eba338274a52036bf3db7fbc29575e24aa9f", package = "gadgets" }
 halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
 
 env_logger = "0.9.0"
@@ -14,6 +16,9 @@ try-catch = "0.2.2"
 anyhow = "1.0.71"
 regex = "1.8.4"
 num = "0.4.0"
+ff = "0.13"
+group = "0.13"
+pasta_curves = "0.5"
 
 [lib]
 name = "korrekt"
