--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ members = [
 
 [patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
 halo2curves = { git = "https://github.com/quantstamp/halo2curves.git",branch = "analyzer"}
+
+[patch."https://github.com/zcash/halo2.git"]
+zcash_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/zcash_halo2.git", package = "halo2_proofs"}
+
+[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
+pse_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/pse-halo2.git", package = "halo2_proofs"}
