--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ members = [
   "benchmarks"
 ]
 
-
-[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
-halo2_proofs = { version = "0.2.0", git = "https://github.com/quantstamp/halo2.git" }
-
 [patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
 halo2curves = { git = "https://github.com/quantstamp/halo2curves.git",branch = "analyzer"}
+
+[patch."https://github.com/zcash/halo2.git"]
+zcash_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/zcash-halo2.git", package = "halo2_proofs"}
+
+[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
+pse_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/pse-halo2.git", package = "halo2_proofs"}
