--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -6,13 +6,7 @@ edition = "2021"
 [dependencies]
 zcash_halo2_proofs = { git = "https://github.com/zcash/halo2.git", package = "halo2_proofs", optional = true}
 pse_halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", package = "halo2_proofs" , optional = true}
-
-# # zcash_halo2_proofs = { git = "https://github.com/zcash/halo2.git", package = "halo2_proofs", optional = true}
-# zcash_halo2_proofs = { path = "../../zcash-halo2/halo2_proofs", package = "halo2_proofs", optional = true}
-# # axiom_halo2_proofs = { git = "https://github.com/axiom-crypto/halo2.git", package = "halo2-axiom", optional = true}
-axiom_halo2_proofs = { path = "../../axiom-halo2/halo2_proofs", package = "halo2-axiom", optional = true}
-# # pse_halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", package = "halo2_proofs" , optional = true}
-# pse_halo2_proofs = { path = "../../pse-halo2/pse-halo2/halo2_proofs", package = "halo2_proofs" , optional = true}
+axiom_halo2_proofs = { git = "https://github.com/axiom-crypto/halo2.git", package = "halo2-axiom", optional = true}
 # gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "2783eba338274a52036bf3db7fbc29575e24aa9f", package = "gadgets" } TODO: Decide on how to manage tests on real external circuits
 halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
 
