--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -25,7 +25,7 @@ name = "korrekt"
 path = "src/lib.rs"
 
 [features]
-default = ["use_zcash_halo2_proofs"]
+default = ["use_pse_halo2_proofs"]
 use_zcash_halo2_proofs = ["zcash_halo2_proofs"]
 use_pse_halo2_proofs = ["pse_halo2_proofs"]
 use_axiom_halo2_proofs = ["axiom_halo2_proofs"]
