--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -26,7 +26,7 @@ name = "korrekt"
 path = "src/lib.rs"
 
 [features]
-default = ["use_pse_v1_halo2_proofs"]
+default = ["use_zcash_halo2_proofs"]
 use_zcash_halo2_proofs = ["zcash_halo2_proofs"]
 use_pse_halo2_proofs = ["pse_halo2_proofs"]
 use_pse_v1_halo2_proofs = ["pse_v1_halo2_proofs"]
