--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ halo2curves = { git = "https://github.com/quantstamp/halo2curves.git",branch = "
 [patch."https://github.com/zcash/halo2.git"]
 zcash_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/zcash-halo2.git", package = "halo2_proofs"}
 
-# For benchmarks we need comment the first patch and uncomment the second patch
+# For pse_v1 and benchmarks we need comment the first patch and uncomment the second patch
 [patch."https://github.com/privacy-scaling-explorations/halo2"]
 pse_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/pse-halo2.git", package = "halo2_proofs"}
 # [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
