--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -28,7 +28,7 @@ name = "korrekt"
 path = "src/lib.rs"
 
 [features]
-default = ["use_scroll_halo2_proofs"]
+default = ["use_zcash_halo2_proofs"]
 # default = []
 use_zcash_halo2_proofs = ["zcash_halo2_proofs"]
 use_pse_halo2_proofs = ["pse_halo2_proofs"]
