--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ pse_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/pse-halo2.git", 
 
 [patch."https://github.com/axiom-crypto/halo2.git"]
 axiom_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/axiom-halo2.git", package = "halo2-axiom"}
+
+[patch."https://github.com/scroll-tech/halo2.git"]
+axiom_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/scroll-halo2.git", package = "halo2_proofs"}
