--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -21,6 +21,8 @@ num = "0.4.0"
 rayon = "1.5.1"
 ff = "0.13"
 group = "0.13"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [lib]
 name = "korrekt"
