fix: use BigInt for fixed columns
Fixed columns can contain a number in the field, which would not fit
u64. A concrete example is the newly added circuit simple/mul.rs,
which has a fixed column that contains the field order minus one (-1).
Prior this commit, running the test would result in the following error:

---- test::integration_tests_zcash::tests::simple_test stdout ----
thread 'test::integration_tests_zcash::tests::simple_test' panicked at korrekt/src/circuit_analyzer/analyzer.rs:108:26:
called `Result::unwrap()` on an `Err` value: ParseIntError { kind: PosOverflow }

This commit fixes the issue by switching from u64 to BigInt.

--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -18,6 +18,7 @@ try-catch = "0.2.2"
 anyhow = "1.0.71"
 regex = "1.8.4"
 num = "0.4.0"
+num-bigint = "0.4.4"
 rayon = "1.5.1"
 ff = "0.13"
 group = "0.13"
