--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -22,6 +22,9 @@ num-bigint = "0.4.4"
 rayon = "1.5.1"
 ff = "0.13"
 group = "0.13"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5"
+clap = "3.0"
 
 [lib]
 name = "korrekt"
