separate preprocessing from SMT solver

--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -25,6 +25,7 @@ group = "0.13"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
 clap = "3.0"
+lazy_static = "1.4.0"
 
 [lib]
 name = "korrekt"
