--- a/korrekt/Cargo.toml
+++ b/korrekt/Cargo.toml
@@ -9,7 +9,7 @@ pse_halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo
 axiom_halo2_proofs = { git = "https://github.com/axiom-crypto/halo2.git", package = "halo2-axiom", optional = true}
 scroll_halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", package = "halo2_proofs", optional = true}
 pse_v1_halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19", package = "halo2_proofs" , optional = true}
-gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "2783eba338274a52036bf3db7fbc29575e24aa9f", package = "gadgets" }# TODO: Decide on how to manage tests on real external circuits
+gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "2783eba338274a52036bf3db7fbc29575e24aa9f", package = "gadgets" }
 halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
 
 env_logger = "0.9.0"
@@ -32,7 +32,7 @@ name = "korrekt"
 path = "src/lib.rs"
 
 [features]
-default = ["use_pse_v1_halo2_proofs"]
+default = ["use_zcash_halo2_proofs"]
 use_zcash_halo2_proofs = ["zcash_halo2_proofs"]
 use_pse_halo2_proofs = ["pse_halo2_proofs"]
 use_axiom_halo2_proofs = ["axiom_halo2_proofs"]
